Fix: moon logo vertical align

--- a/index.css
+++ b/index.css
@@ -41,10 +41,17 @@ header{
     flex: 1;
 }
 .header__logo .rotate{
-    height:40px;
+    height: 32px;
     display: inline-block;
     color: #badefc;
+    float: left;
+    margin: 4px;
     animation: rotate 2s infinite;
+
+}
+.header__logo .rotate:after{
+    content: '';
+    clear: both;
 }
 
 .header__logo h1{
